<resources>
    <string name="app_name">Instady Downloader</string>
    <string name="enter_url">Enter or paste link</string>
    <string name="paste_url">Paste link</string>
    <string name="get_resource">Download</string>
    <string name="input">Input</string>
    <string name="download">Download</string>
    <string name="browser">Browser</string>
    <string name="title_1">Parsing link</string>
    <string name="title_2">Download task</string>
    <string name="title_3">Browser</string>
    <string name="input_web_url">The link of Douyin, Instagram</string>
    <string name="paste_success">Pasted successfully</string>
    <string name="download_title">Download resources?</string>
    <string name="download_message">%1$d %2$s were found</string>
    <string name="download_error_title">An error occurred!</string>
    <string name="download_error_message">Please check the link or network connection</string>
    <string name="download_error_title_2">Acquisition failed!</string>
    <string name="download_error_message_2">Please try in the post</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="fail">fail</string>
    <string name="complete">complete</string>
    <string name="stop">stop</string>
    <string name="waiting">waiting</string>
    <string name="running">running</string>
    <string name="pretreatment">pretreatment</string>
    <string name="pretreatment_complete">pretreatment complete</string>
    <string name="delete">delete</string>
    <string name="toast_message">Start %1$d tasks, %2$d tasks already exists</string>
    <string name="delete_task">Delete task</string>
    <string name="save_task">Save to album</string>
    <string name="share_task">Share</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_fail">Save failed</string>
    <string name="delete_success">Delete successfully</string>
    <string name="choose_app">Choose an app to share</string>
    <string name="share_app">Share app</string>
    <string name="praise_app">Rate us</string>
    <string name="support_us">Support me</string>
    <string name="download_setting">Download</string>
    <string name="storage_setting">Storage</string>
    <string name="share_app_message">help you download instagram and douyin resources: https://github.com/xuedongyun/instady#instady</string>
    <string name="download_again_title">Download again?</string>
    <string name="download_again_message">This task has been downloaded</string>
    <string name="delete_task_title">Delete this task?</string>
    <string name="delete_mut_task_title">Delete the selected %1$d tasks?</string>
    <string name="delete_task_message">Delete the file at the same time</string>
    <string name="save_mut_task_success">Save %1$d resources to album</string>
    <string name="instagram_help">*How to get Instagram link?</string>
    <string name="douyin_help">*How to get douyin links?</string>
    <string name="choose_market">Choose the market</string>
    <string name="no_task">The task list is empty</string>
    <string name="douyin">douyin</string>
    <string name="Instagram">Instagram</string>
    <string name="task_num">task num</string>
    <string name="task_num_content">Simultaneous downloads</string>
    <string name="thread_num">thread num</string>
    <string name="thread_num_content">Thread per download</string>
    <string name="download_speed">download speed</string>
    <string name="download_speed_content">Maximum download speed</string>
    <string name="storage_position">storage position</string>
    <string name="album_setting">album setting</string>
    <string name="album_setting_content">save files to album after download</string>
    <string name="setting">Setting</string>
    <string name="others">others</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <string name="exit">exit</string>
    <string name="donate_message_title">Donation - making instady better</string>
    <string name="donate_message">This application is made out of personal interest, without any other means of income generation. It is completely power generation with love. Your encouragement and support can not only inspire the developers themselves, but also help the software become better. I hope you can note your nickname and message when donating. I will make it appear in the app when the version is updated.</string>
    <string name="donate_message_saying">All for one, one for all.</string>
    <string name="wechat">Wechat</string>
    <string name="wechat_explain">Save the QR code to the album and open wechat</string>
    <string name="alipay">Alipay</string>
    <string name="alipay_explain">Please use browser to invoke and open Alipay.</string>
    <string name="paypal">paypal</string>
    <string name="alipay_paypal">Please use browser to open</string>
    <string name="not_found_wecaht">Failed to open, wechat not found</string>
    <string name="donate_title">No matter the amount, your support is my biggest motivation!</string>
    <string name="file_manager_not_found">File Manager not found</string>
</resources>