<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateActivity"
    android:id="@+id/constraint_layout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink_700"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/support_us" />
    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:id="@+id/donate_message_card"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.95"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/donate_message_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink_700"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/donate_message_title"
                android:textColor="@color/gray_100"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/donate_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/donate_message"
                app:layout_constraintTop_toBottomOf="@id/donate_message_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/donate_message_saying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/donate_message_saying"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/donate_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donate_message_card"
        app:layout_constraintWidth_percent="0.95">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/donate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink_700"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/donate_title"
                android:textColor="@color/gray_100"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wechat_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/donate_title">

                <ImageView
                    android:id="@+id/wechat_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_wechat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wechat_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/wechat"
                    android:textColor="@color/gray_700"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toTopOf="@id/wechat_explain_tv"
                    app:layout_constraintLeft_toRightOf="@id/wechat_iv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wechat_explain_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/wechat_explain"
                    android:textColor="@color/gray_700"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/wechat_iv"
                    app:layout_constraintTop_toBottomOf="@id/wechat_tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alipay_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/wechat_card">

                <ImageView
                    android:id="@+id/alipay_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_alipay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/alipay_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alipay"
                    android:textColor="@color/gray_700"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toTopOf="@id/alipay_explain_tv"
                    app:layout_constraintLeft_toRightOf="@id/alipay_iv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/alipay_explain_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alipay_explain"
                    android:textColor="@color/gray_700"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/alipay_iv"
                    app:layout_constraintTop_toBottomOf="@id/alipay_tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/paypal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/alipay_card">

                <ImageView
                    android:id="@+id/paypal_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_paypal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/paypal_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/paypal"
                    android:textColor="@color/gray_700"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toTopOf="@id/paypal_explain_tv"
                    app:layout_constraintLeft_toRightOf="@id/paypal_iv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/paypal_explain_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alipay_paypal"
                    android:textColor="@color/gray_700"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/paypal_iv"
                    app:layout_constraintTop_toBottomOf="@id/paypal_tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>