<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/download_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tool_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="#00000000"
            android:text="@string/exit"
            android:textColor="@color/gray_700"
            android:textSize="12dp"
            app:icon="@drawable/ic_exit"
            app:iconGravity="top"
            app:iconSize="16dp"
            app:iconTint="@color/gray_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="#00000000"
            android:text="@string/delete"
            android:textColor="@color/gray_700"
            android:textSize="12dp"
            app:icon="@drawable/ic_delete"
            app:iconGravity="top"
            app:iconSize="16dp"
            app:iconTint="@color/gray_700"
            app:layout_constraintLeft_toRightOf="@+id/return_btn"
            app:layout_constraintRight_toLeftOf="@id/share_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="#00000000"
            android:text="@string/share"
            android:textColor="@color/gray_700"
            android:textSize="12dp"
            app:icon="@drawable/ic_share"
            app:iconGravity="top"
            app:iconSize="16dp"
            app:iconTint="@color/gray_700"
            app:layout_constraintLeft_toRightOf="@+id/delete_btn"
            app:layout_constraintRight_toLeftOf="@id/save_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="#00000000"
            android:text="@string/save"
            android:textColor="@color/gray_700"
            android:textSize="12dp"
            app:icon="@drawable/ic_save"
            app:iconGravity="top"
            app:iconSize="16dp"
            app:iconTint="@color/gray_700"
            app:layout_constraintLeft_toRightOf="@+id/share_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
