<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_100">

            <EditText
                android:id="@+id/url_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:background="@drawable/bg_url_edit"
                android:hint="@string/enter_url"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9" />

            <Button
                android:id="@+id/paste_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bg_2"
                android:padding="5dp"
                android:text="@string/paste_url"
                android:textAllCaps="false"
                android:textColor="@color/gray_100"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_edit"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bg_2"
                android:padding="5dp"
                android:text="@string/get_resource"
                android:textAllCaps="false"
                android:textColor="@color/gray_100"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_edit"
                app:layout_constraintWidth_percent="0.4" />

            <androidx.cardview.widget.CardView
                android:id="@+id/instagram_help_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paste_btn"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/instagram_help_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_700"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/instagram_help"
                        android:textColor="@color/gray_100"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />
                    app:layout_constraintTop_toBottomOf="@id/donate_message_title" />

                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_instagram_icon"
                        app:layout_constraintBottom_toBottomOf="@id/instagram_help_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="@id/instagram_help_title" />

                    <ImageView
                        android:id="@+id/instagram_help"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/instagram_help"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/instagram_help_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/douyin_help_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instagram_help_card"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/douyin_help_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/pink_700"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/douyin_help"
                        android:textColor="@color/gray_100"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />
                    app:layout_constraintTop_toBottomOf="@id/donate_message_title" />
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_douyin_icon"
                        app:layout_constraintBottom_toBottomOf="@id/douyin_help_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="@id/douyin_help_title" />

                    <ImageView
                        android:id="@+id/douyin_help"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/douyin_help"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/douyin_help_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>